--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
 queuelib==1.5.0
 Scrapy==2.1.0
+selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
 Twisted==20.3.0
+urllib3==1.25.9
 w3lib==1.22.0
 zope.interface==5.1.0
